--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -15,10 +15,14 @@ body{
     justify-content: space-between;
 }
 
-ul{
-    list-style-type: none;
+ul,
+p{    
     margin: 0;
     padding: 0;
+}
+
+ul {
+    list-style-type: none;
 }
 
 a{
@@ -30,7 +34,8 @@ a{
 .navitems,
 .main,
 .product-info,
-.footer {
+.footer,
+.socialmedia-list {
     display: flex;
 }
 
@@ -52,19 +57,26 @@ a{
     margin: 0 32px;
 }
 
-#logo{
+#logo,
+.footer-title{
     font-weight: 800;
     font-size: 32px;
-    color: #53C9AB;
+}
+
+#logo{
     margin: auto 0;
+    color: #53C9AB;
+}
+
+.footer-title {
+    margin: 0 0 10px;
 }
 
 .news {
-    background: url("../media/keyboard-news2.png") no-repeat center center;
+    background: url("../media/backgrounds/keyboard-news.png") no-repeat center;
     background-size: auto 100%;
-    height: 5000px;
     color: white;
-    padding: 100px;
+    padding: 100px 55px;
 }
 
 .news-title,
@@ -113,4 +125,25 @@ a{
     justify-content: space-between;
     font-weight: 1000;
     font-size: 24px;
+}
+
+.footer {
+    background-color: #53C9AB;
+    color: white;
+    justify-content: space-around;
+    padding: 75px 55px 35px;
+}
+
+.socialmedia {
+    width: min-content;
+    white-space: nowrap;
+}
+.socialmedia-list{
+    gap: 20px;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.socialmedia-list img {
+    width: 32px;
 }
