--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -10,9 +10,9 @@ button{
 body{
     margin: 0;
     height: 100vh;
-    display: flex;
+    /* display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-between; */
 }
 
 ul,
@@ -41,7 +41,7 @@ a{
 
 .navbar {
     justify-content: space-between;
-    padding: 32px;
+    padding: 32px 55px;
 }
 
 .navitems {
@@ -77,6 +77,7 @@ a{
     background-size: auto 100%;
     color: white;
     padding: 100px 55px;
+    height: 280px;
 }
 
 .news-title,
@@ -130,7 +131,7 @@ a{
 .footer {
     background-color: #53C9AB;
     color: white;
-    justify-content: space-around;
+    justify-content: space-between;
     padding: 75px 55px 35px;
 }
 
