--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -25,12 +25,15 @@ ul {
     list-style-type: none;
 }
 
+a{
+    text-decoration: none;
+    color: #000000;
+}
+
 .section {
     font-weight: 800;
     font-size: 22px;
     text-transform: capitalize;
-    text-decoration: none;
-    color: #000000;
     padding: 20px 0px;
     margin: 0px 20px;
     display: inline-block;
@@ -109,7 +112,7 @@ ul {
 
 .news-title,
 .news-subtext{
-    text-shadow: 2px 4px 4px rgb(65, 65, 65);
+    text-shadow: 2px 4px 4px rgb(116, 116, 116);
     margin: 0;
 }
 
@@ -149,6 +152,10 @@ ul {
     border-radius: 10px;
 }
 
+.product{
+    margin-bottom: 30px;
+}
+
 .product-info {
     justify-content: space-between;
     font-weight: 1000;
@@ -158,7 +165,7 @@ ul {
 .footer {
     background-color: #53C9AB;
     color: white;
-    justify-content: space-between;
+    justify-content: space-around;
     padding: 75px 55px 35px;
 }
 
