--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -143,7 +143,7 @@ a{
     justify-content: center;
     align-items: center;
     gap: 30px;
-    padding: 150px 55px 250px;
+    padding: 150px 55px;
 }
 
 .main img {
@@ -153,13 +153,15 @@ a{
 }
 
 .product{
-    margin-bottom: 30px;
+    margin-bottom: 45px;
 }
 
 .product-info {
     justify-content: space-between;
     font-weight: 1000;
     font-size: 24px;
+    margin-top: 12px;
+    padding: 0 4px;
 }
 
 .footer {
@@ -181,4 +183,13 @@ a{
 
 .socialmedia-list img {
     width: 32px;
+}
+
+.product img:hover{
+    filter: brightness(90%);
+    transition: 100ms;
+}
+
+.price{
+    color: #009b15;
 }
