--- a/stylesheets/cart.css
+++ b/stylesheets/cart.css
@@ -16,8 +16,7 @@ body{
 .cart-body {
     flex: 1;
     flex-direction: column;
-    gap: 12px;
-    padding: 50px;
+    padding: 55px;
     background-color: rgb(243, 243, 243);
 }
 
@@ -43,7 +42,8 @@ body{
 .product-price,
 .product-quantity,
 .product-total,
-.product-remove{
+.product-remove,
+.totalprice{
     flex: 1;
 }
 
@@ -64,4 +64,53 @@ body{
 .product-remove {
     width: 100%;
     height: 100%;
+    cursor: pointer;
 }
+
+.cart-info,
+.cart-item{
+    gap: 16px;
+    border-bottom: solid 1px black;
+    padding: 10px 0;
+}
+
+.quantity-form {
+    font-size: 24px;
+    width: 50px;
+    height: 15px;
+    padding: 16px;
+    border: 2px solid #636363;
+    border-radius: 3px;
+    color: #1c1c1c;
+    font-weight: 600;
+}
+
+.interactions {
+    align-self: flex-end;
+    padding: 10px;
+}
+
+.btn{
+
+}
+
+.totalprice-voice,
+.totalprice {
+    font-size: 26px;
+    padding: 0;
+    margin: 0;
+}
+
+.totalprice-box {
+    display: flex;
+    justify-content: flex-start;
+    gap: 16px;
+    padding: 10px;
+    font-weight: 600;
+}
+
+.totalprice-voice {
+    flex: 7;
+    text-align: right;
+}
+
