--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -129,14 +129,21 @@ a{
 }
 
 .btn {
-    margin-top: 50px;
-    background-color: #53C9AB;
-    border:#53C9AB solid;
-    border-radius: 3px;
-    color: white;
-    padding: 10px 20px;
     font-weight: 800;
     font-size: 18px;
+    height: 60px;
+    padding: 16px;
+    border: 2px solid #53C9AB;
+    border-radius: 3px;
+    background-color: #53C9AB;
+    color: white;
+    cursor: pointer;
+}
+
+.btn:hover {
+    background-color: #ffa742;
+    border-color: #ffa742;
+    transition: 200ms;
 }
 
 .main {
