--- a/stylesheets/cart.css
+++ b/stylesheets/cart.css
@@ -18,6 +18,7 @@ body{
     flex-direction: column;
     padding: 55px;
     background-color: rgb(243, 243, 243);
+    padding-bottom: 150px;
 }
 
 #cart-title {
@@ -64,6 +65,9 @@ body{
 .product-remove {
     width: 100%;
     height: 100%;
+}
+
+.remove-icon {
     cursor: pointer;
 }
 
