--- a/stylesheets/cart.css
+++ b/stylesheets/cart.css
@@ -39,11 +39,9 @@ body{
 #total-voice,
 #price-voice,
 #quantity-voice,
-#remove-voice,
 .product-price,
 .product-quantity,
 .product-total,
-.product-remove,
 .totalprice{
     flex: 1;
 }
@@ -51,8 +49,7 @@ body{
 .product-title,
 .product-price,
 .product-quantity,
-.product-total,
-.product-remove{
+.product-total{
     font-size: 24px;
     font-weight: 600;
 }
@@ -60,11 +57,6 @@ body{
 .product-image {
     width: 150px;
     border-radius: 5px;
-}
-
-.product-remove {
-    width: 100%;
-    height: 100%;
 }
 
 .remove-icon {
